chore(gitignore): Exclude docs local config files
- Add docs/.moai/ directory (local MoAI config)
- Add docs config files (config.yaml, multilingual-triggers.yaml, statusline-config.yaml)
- Add docs local directories (questions/, sections/)
- Add docs setup script (setup-glm.py)

These are local documentation setup files, not for distribution.

--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,12 @@ models/*.bin
 # Test audio files (test fixtures with real audio)
 tests/fixtures/audio/
 tests/audio_samples/
+
+# Documentation local config (not for distribution)
+docs/.moai/
+docs/config.yaml
+docs/multilingual-triggers.yaml
+docs/questions/
+docs/sections/
+docs/setup-glm.py
+docs/statusline-config.yaml
